--- a/src/index.css
+++ b/src/index.css
@@ -2,18 +2,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 /* Importar Tailwind CSS */
-@import "tailwindcss";
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
 /* Importar DaisyUI */
-@plugin "daisyui";
+@import "daisyui";
 
 /* Definir la fuente personalizada */
-@theme {
-  --font-inter: "Inter", sans-serif;
+* {
+  font-family: "Inter", sans-serif;
 }
 
 /* Estilo del slider/banner */
 .banner_slide_item {
-  display: flex !important;
+  display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 7.5rem;
@@ -47,31 +50,31 @@
 /* Estilos del slider */
 .slider_container > .slick-slider > .slick-prev,
 .slider_container > .slick-slider > .slick-next {
-  z-index: 5 !important;
+  z-index: 5;
 }
 
 .slick-prev {
-  left: -95px !important;
+  left: -95px;
 }
 
 .slick-next {
-  right: -95px !important;
+  right: -95px;
 }
 
 .slider_container > .slick-slider > .slick-prev:before,
 .slider_container > .slick-slider > .slick-next:before {
   font-family: "slick";
-  font-size: 52px !important;
+  font-size: 52px;
   line-height: 1;
   opacity: 0.75;
-  color: #007580 !important;
+  color: #007580;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 .slider_container > .slick-slider > .slick-dots {
   position: absolute;
-  bottom: 100px !important;
+  bottom: 100px;
   display: block;
   width: 100%;
   padding: 0;
@@ -82,7 +85,7 @@
 
 .slider_container > .slick-slider > .slick-dots li button:before {
   font-family: "slick";
-  font-size: 22px !important;
+  font-size: 22px;
   line-height: 20px;
   position: absolute;
   top: 0;
@@ -102,7 +105,7 @@
   > .slick-dots
   > li.slick-active
   button:before {
-  color: #007580 !important;
+  color: #007580;
 }
 
 /* Estilos para el componente de entrega */
@@ -115,7 +118,7 @@
 /* Estilos del slider de características */
 .features_slider > .slick-slider > .slick-prev:before,
 .features_slider > .slick-slider > .slick-next:before {
-  font-size: 39px !important;
+  font-size: 39px;
   color: #007580;
 }
 
@@ -143,21 +146,21 @@
 
   .slick-prev,
   .slick-next {
-    left: -70px !important;
-    right: -70px !important;
+    left: -70px;
+    right: -70px;
   }
 
   .slick-prev:before,
   .slick-next:before {
-    font-size: 42px !important;
+    font-size: 42px;
   }
 
   .slider_container > .slick-slider > .slick-dots {
-    bottom: 60px !important;
+    bottom: 60px;
   }
 
   .slider_container > .slick-slider > .slick-dots li button:before {
-    font-size: 18px !important;
+    font-size: 18px;
   }
 
   .delivery_component {
@@ -177,20 +180,20 @@
 
   .slick-prev,
   .slick-next {
-    left: -80px !important;
-    right: -80px !important;
+    left: -80px;
+    right: -80px;
   }
 
   .slick-prev:before,
   .slick-next:before {
-    font-size: 47px !important;
+    font-size: 47px;
   }
 
   .slider_container > .slick-slider > .slick-dots {
-    bottom: 80px !important;
+    bottom: 80px;
   }
 
   .slider_container > .slick-slider > .slick-dots li button:before {
-    font-size: 20px !important;
+    font-size: 20px;
   }
 }
